-Added new surface background sprites for the spooky forest and swampy cemetery
-Added a new alternate surface background style for the swampy cemetery
-Removed all of the vinyl discs and replaced them with new proper music boxes, the way they are obtained is still the same (Purchased from musicman during a raveyard)
-Added turkies that can be tamed with rotten seeds
-Chalupo is back and better than ever


Structure Helper is no longer a dependency: 

-Spooky mod still uses structure helper but as of this update structure helper is not a direct dependency, meaning you no longer need to have it downloaded and enabled to use spooky mod




~CHANGES TO EXISTING CONTENT~


~Items~

Melee:
-Buffed swingable sphider damage from 30 to 35
-Nerfed spider stabber damage from 25 to 20, but it now inflicts venom instead of poison
-Nerfed bulb bomb damage from 52 to 45 and its thorns now deal half the base damage
-Dave & mike no longer needs to physically touch the enemy its targeting in order to begin attacking it, and massively increased the distance which dave and mike can target enemies from

Ranged:
-Buffed spider egg cannon damage from 16 to 25
-Buffed venomous crossbow damage from 25 to 32, and renamed it to poison crossbow
-Ooze magnum giant bile glob that is shot when released at maximum fire rate now explodes into 30 small globs instead of 10
-Buffed seer damage from 22 to 30

Magic:
-Necronomicon volume II heart projectile now shoots a bit more frequently in all size stages
-Nerfed jerrys book of stinkology projectile now has damage fall-off each time it pierces an enemy
-Snot nosed tome no longer flies to your cursor, it now summons the channeled nose above you, and shoots boogers at your cursor
-Changed moocher staff projectile to be a giant cursed fire explosion that launches some cursed fireballs upward, it now does more damage, is more useful against flying targets, and visually looks better