@@ -187,4 +187,4 @@ SummerBloomPlant.MapEntry: Solar Bloom
 VegetableBloomPlant.MapEntry: Genetically-Modified Bloom
 WinterBloomPlant.MapEntry: Berry Bush Bloom
 LabSafe.MapEntry: Rusty Safe
-EyeTreeShort.MapEntry: Eye Tree Short
+EyeTreeShort.MapEntry: Eye Stalk
